[tool.poetry]
name = "rosettascripts"
version = "0.1.0"
description = "Scripts for RNA homology and de novo modeling using the Rosetta suite"
authors = [
    "Fabio Steffen <fabio.steffen@chem.uzh.ch>", 
    "Roland K.O. Sigel <roland.sigel@chem.uzh.ch>", 
    "Richard Börner <richard.boerner@hs-mittweida.de>"]
maintainers = ["Fabio Steffen <fabio.steffen@chem.uzh.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://rna-fretools.github.io/"
repository = "https://github.com/RNA-FRETools/rosetta-scripts"
documentation = "https://github.com/RNA-FRETools/rosetta-scripts"
keywords = ["Rosetta", "RNA", "molecular modeling", "PDB"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.4"
biopython = "^1.79"

[tool.poetry.dev-dependencies]
jupyter-book = "^0.12.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.scripts]
rosettascripts = "rosettascripts.console:rosettascripts"
extract_pdb = "rosettascripts.console:extract_pdb"
submitJobs = "rosettascripts.console:submitJobs"
process_silentfile = "rosettascripts.console:process_silentfile"
pdb_resi_renumber = "rosettascripts.pdb_resi_renumber:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
